:notes: lyrics: Initial commit
Convert the old lyrics page from the v3 site into a fancy new Jekyll-
driven way of serving the site. Includes fancy SEO improvements that
might make this page more discoverable. Maybe?

Either way, a little nostalgia peppered in on my website.

Signed-off-by: Justin W. Flory <git@jwf.io>

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ twitter_username: jflory7
 
 # --- build settings ---
 
-markdown: GFM
+markdown: kramdown
 permalink: pretty  # no .html extensions
 plugins:
   - jekyll-feed
